Fixes buttons on Firefox

--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -131,7 +131,8 @@ header {
   &:hover { background: $green; }
 }
 
-button, .get-tickets {
+.button, .get-tickets {
+  display: inline-block;
   text-transform: uppercase;
   font-size: 18px;
   background: $green;
@@ -235,11 +236,11 @@ article {
 
 .scholarship-application {
   background: #ffedff;
-  button { background: #f52eff; }
+  .button { background: #f52eff; }
 }
 .scholarship-donate {
   background: #fff4d6;
-  button { background: $orange; }
+  .button { background: $orange; }
 }
 
 footer {
